# templates

./: flake.nix
haskell/: .envrc  CHANGELOG.md  flake.nix  template.cabal
haskell/app/: Main.hs
haskell/src/: Prelude.hs
shell/: flake.nix
