cabal-version:   3.4
name:            template
version:         0.1.0.0

-- synopsis:
-- description:
license:         MPL-2.0
license-file:    LICENSE
author:          Andrei Borzenkov
maintainer:      andreyborzenkov2002@gmail.com

-- copyright:
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options: 
    -Wall
    -Wno-unticked-promoted-constructors

common extensions
  default-extensions:
    NoFieldSelectors
    NoStarIsType
    BangPatterns
    BinaryLiterals
    BlockArguments
    CApiFFI
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DisambiguateRecordFields
    DuplicateRecordFields
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    ExplicitNamespaces
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GHCForeignImportPrim
    GeneralizedNewtypeDeriving
    ImplicitParams
    ImportQualifiedPost
    ImpredicativeTypes
    InstanceSigs
    KindSignatures
    LambdaCase
    LexicalNegation
    LiberalTypeSynonyms
    LinearTypes
    MagicHash
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NamedWildCards
    NumDecimals
    NumericUnderscores
    OverloadedLabels
    OverloadedLists
    OverloadedRecordDot
    OverloadedRecordUpdate
    OverloadedStrings
    PackageImports
    ParallelListComp
    PartialTypeSignatures
    PatternSynonyms
    PolyKinds
    PostfixOperators
    QualifiedDo
    QuantifiedConstraints
    RankNTypes
    RecordWildCards
    RecursiveDo
    RoleAnnotations
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
    TypeSynonymInstances
    UnboxedSums
    UnboxedTuples
    UnicodeSyntax
    UnliftedDatatypes
    UnliftedFFITypes
    UnliftedNewtypes
    ViewPatterns

common dependensies
  build-depends:
    , base
    , lens
    , generic-lens
    , universum

  mixins:        base hiding (Prelude)

library
  import:           warnings, extensions, dependensies

  -- cabal-fmt: expand src
  exposed-modules:  Prelude

  -- other-modules:
  -- other-extensions:
  build-depends:
  hs-source-dirs:   src
  default-language: GHC2021

executable template
  import:           warnings, extensions, dependensies
  main-is:          Main.hs
  other-modules:

  -- other-extensions:
  build-depends:    template
  hs-source-dirs:   app
  default-language: GHC2021
